--- a/beranda.html
+++ b/beranda.html
@@ -16,7 +16,7 @@ Coba Sentuh Link ini
 
 <a href="#"><img src="https://www.petanikode.com/img/logo.svg" /></a>
 <a href="MODUL PELATIHAN WEB BARU">Downlod modul pelatihan web</a>
-<a href="mailto:divdik.pub@gmail.com" title="kirim email ke Admin">
+<a href="mailto:divdik.pub@gmail.com" title="kirim email ke Admin dan ">
     Hubungi Kami
     </a>
    <p> <img src="assets/1548a031715a0e4105f59ceedccf4f0f.jpg" width="100">
