--- a/beranda.html
+++ b/beranda.html
@@ -28,6 +28,9 @@ Coba Sentuh Link ini
 <source media="(min-width: 550px)" srcset="Assets/sawah.jpg"
 width="450px" hight="300px">
 <img src="#">
+
+<h1>Haloooo</h1>
+
 </picture>
 </p>
 </body>
